--- a/components/WorkoutTimeline.module.css
+++ b/components/WorkoutTimeline.module.css
@@ -8,6 +8,7 @@
     height: 80px;
     display: inline-block;
     transition: background-color 0.5s ease, width 0.5s ease, background 0.5s ease;
+    border: 1px solid rgb(73, 73, 73);
 }
 
 .wrapper:hover {
@@ -15,10 +16,10 @@
     filter: brightness(1.2);
 }
 
-.wrapper span {
+/* Text color for the percentage */
+/* .wrapper span {
     position: absolute;
     right: 5px;
     top: 5px;
     color: black;
-    /* Text color for the percentage */
-}
+} */
